Fixed the language selector layout issue.  Improved sidebar layout, esp. search bar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,11 @@
  *= require_tree .
  */
 
+@viewport{
+  zoom: 1.0;
+  width: extend-to-zoom;
+}
+
 .male {
   background-color: #CCCCCC;
   color: #000000;
@@ -40,9 +45,15 @@
   font-size: 350%;
 }
 
+#horse_search_bar {
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 5%;
+}
+
 .has_image_checkbox {
-  margin-left: 42%;
-  margin-right: 1%;
+  float: right;
+  margin-right: 6%;
   font-size: 150%;
   color: gray;
 }
@@ -52,5 +63,6 @@
 }
 
 .language_selector {
-  margin-left: 79%;
+  float: right;
+  margin-right: 2%;
 }
